AC_INIT([until],[1.0],[bug-until@beneschtech.com])
AM_INIT_AUTOMAKE([-Wall])
AC_PROG_CC
AC_CHECK_FUNCS([memset])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADER_STDBOOL
AC_TYPE_SIZE_T 
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
Makefile
src/Makefile
])
AC_OUTPUT
